--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -153,18 +153,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "294478"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of rows in the dataset: 294478\n"
+     ]
     }
    ],
    "source": [
-    "df.shape[0]"
+    "row_no = df.shape[0]\n",
+    "print('The number of rows in the dataset: ' + str(row_no))"
    ]
   },
   {
@@ -180,18 +178,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "290584"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of unique users in the dataset: 290584\n"
+     ]
     }
    ],
    "source": [
-    "df['user_id'].nunique()  "
+    "unique_users=len(df.groupby('user_id'))\n",
+    "print('The number of unique users in the dataset: ' + str(unique_users))"
    ]
   },
   {
@@ -205,22 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.11965919355605512"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The proportion of users converted: 0.119659193556\n"
+     ]
     }
    ],
    "source": [
-    "df.converted.mean()"
+    "conv_user= df.converted.mean()\n",
+    "print('The proportion of users converted: ' + str(conv_user))"
    ]
   },
   {
@@ -234,23 +228,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3893"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of times the new page and treatment do not line up is: 3893\n"
+     ]
     }
    ],
    "source": [
-    "df.query(\"landing_page == 'new_page' and group != 'treatment'\").count()[0] + \\\n",
-    "df.query(\"landing_page != 'new_page' and group == 'treatment'\").count()[0] "
+    "query1 = df.query(\"landing_page == 'new_page' and group != 'treatment'\").count()[0] + \\\n",
+    "df.query(\"landing_page != 'new_page' and group == 'treatment'\").count()[0] \n",
+    "print('The number of times the new page and treatment do not line up is: ' + str(query1) )"
    ]
   },
   {
@@ -261,8 +253,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### No missing values have been found"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -297,13 +296,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -876,7 +888,7 @@
        "[1928 rows x 5 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,11 +901,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-307d941dd327>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Double Check all of the correct rows were removed - this should be 0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'group'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'treatment'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdf2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'landing_page'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'new_page'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df2' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Double Check all of the correct rows were removed - this should be 0\n",
     "df2[((df2['group'] == 'treatment') == (df2['landing_page'] == 'new_page')) == False].shape[0]"
@@ -1511,7 +1533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
