--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -6,7 +6,6 @@
    "source": [
     "## Analyze A/B Test Results\n",
     "\n",
-    "This project will assure you have mastered the subjects covered in the statistics lessons.  The hope is to have this project be as comprehensive of these topics as possible.  Good luck!\n",
     "\n",
     "## Table of Contents\n",
     "- [Introduction](#intro)\n",
@@ -14,49 +13,30 @@
     "- [Part II - A/B Test](#ab_test)\n",
     "- [Part III - Regression](#regression)\n",
     "\n",
-    "\n",
-    "<a id='intro'></a>\n",
-    "### Introduction\n",
-    "\n",
-    "A/B tests are very commonly performed by data analysts and data scientists.  It is important that you get some practice working with the difficulties of these \n",
-    "\n",
-    "For this project, you will be working to understand the results of an A/B test run by an e-commerce website.  Your goal is to work through this notebook to help the company understand if they should implement the new page, keep the old page, or perhaps run the experiment longer to make their decision.\n",
-    "\n",
-    "**As you work through this notebook, follow along in the classroom and answer the corresponding quiz questions associated with each question.** The labels for each classroom concept are provided for each question.  This will assure you are on the right track as you work through the project, and you can feel more confident in your final submission meeting the criteria.  As a final check, assure you meet all the criteria on the [RUBRIC](https://review.udacity.com/#!/projects/37e27304-ad47-4eb0-a1ab-8c12f60e43d0/rubric).\n",
-    "\n",
-    "<a id='probability'></a>\n",
-    "#### Part I - Probability\n",
-    "\n",
-    "To get started, let's import our libraries."
+    "#### Part I - Probability\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import all the necessary packages \n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "\n",
     "#We are setting the seed to assure you get the same answers on quizzes as we set up\n",
     "random.seed(42)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`1.` Now, read in the `ab_data.csv` data. Store it in `df`.  **Use your dataframe to answer the questions in Quiz 1 of the classroom.**\n",
-    "\n",
-    "a. Read in the dataset and take a look at the top few rows here:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -141,26 +121,22 @@
        "4   864975  2017-01-21 01:52:26.210827    control     old_page          1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Load movies' data frame\n",
     "df =  pd.read_csv('ab_data.csv')\n",
+    "\n",
+    "# Print out the first 5 lines to see how the dataset looks like\n",
     "df.head()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "b. Use the below cell to find the number of rows in the dataset."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -172,20 +148,15 @@
     }
    ],
    "source": [
+    "# find out the number of rows in the dataset and print out this figure\n",
+    "\n",
     "row_no = df.shape[0]\n",
     "print('The number of rows in the dataset: ' + str(row_no))"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "c. The number of unique users in the dataset."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -197,17 +168,10 @@
     }
    ],
    "source": [
+    "# Find out the number of unique users in the dataset.\n",
+    "\n",
     "unique_users=len(df.groupby('user_id'))\n",
     "print('The number of unique users in the dataset: ' + str(unique_users))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "d. The proportion of users converted."
    ]
   },
   {
@@ -224,22 +188,15 @@
     }
    ],
    "source": [
+    "# The proportion of users converted.\n",
+    "\n",
     "conv_user= df.converted.mean()\n",
     "print('The proportion of users converted: ' + str(conv_user))"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "e. The number of times the `new_page` and `treatment` don't line up."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -251,6 +208,8 @@
     }
    ],
    "source": [
+    "# The number of times the `new_page` and `treatment` don't line up.\n",
+    "\n",
     "query_mask = df.query(\"landing_page == 'new_page' and group != 'treatment'\").count()[0] + \\\n",
     "df.query(\"landing_page != 'new_page' and group == 'treatment'\").count()[0] \n",
     "print('The number of times the new page and treatment do not line up is: ' + str(query_mask) )"
@@ -265,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -286,6 +245,8 @@
     }
    ],
    "source": [
+    "# Find out if any of the rows have missing values..\n",
+    "\n",
     "df.info()"
    ]
   },
@@ -311,6 +272,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "df.drop(df.query(\"group == 'treatment' and landing_page != 'new_page'\").index, inplace = True)\n",
     "df.drop(df.query(\"group == 'control' and landing_page != 'old_page'\").index, inplace = True)\n",
     "df2 = df"
@@ -366,13 +329,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "a. How many unique **user_id**s are in **df2**?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -389,21 +345,14 @@
     }
    ],
    "source": [
+    "# Find out how many unique user_ids are in df2?\n",
+    "\n",
     "len(df2.groupby('user_id'))"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "b. There is one **user_id** repeated in **df2**.  What is it?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -452,48 +401,15 @@
        "2893   773192  2017-01-14 02:55:59.590927  treatment     new_page          0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Show the information for the repeat user_id\n",
+    "\n",
     "df2[df2['user_id'].duplicated()]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "c. What is the row information for the repeat **user_id**? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 290585 entries, 0 to 294477\n",
-      "Columns: 5 entries, user_id to converted\n",
-      "dtypes: int64(2), object(3)\n",
-      "memory usage: 13.3+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df2.info('user_id' == 773192)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "d. Remove **one** of the rows with a duplicate **user_id**, but keep your dataframe as **df2**."
    ]
   },
   {
@@ -537,6 +453,7 @@
     }
    ],
    "source": [
+    "\n",
     "df2.shape"
    ]
   },
@@ -623,56 +540,6 @@
    ],
    "source": [
     "df2[df2['converted'] == 1].count()[4] / df2['converted'].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "user_id         34753\n",
-       "timestamp       34753\n",
-       "group           34753\n",
-       "landing_page    34753\n",
-       "converted       34753\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2[df2['converted'] == 1].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "user_id         255832\n",
-       "timestamp       255832\n",
-       "group           255832\n",
-       "landing_page    255832\n",
-       "converted       255832\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2[df2['converted'] == 0].count()"
    ]
   },
   {
