style: formatting and adding comments; No code change

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -19,11 +19,12 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import all the necessary packages \n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
@@ -149,7 +150,6 @@
    ],
    "source": [
     "# find out the number of rows in the dataset and print out this figure\n",
-    "\n",
     "row_no = df.shape[0]\n",
     "print('The number of rows in the dataset: ' + str(row_no))"
    ]
@@ -169,7 +169,6 @@
    ],
    "source": [
     "# Find out the number of unique users in the dataset.\n",
-    "\n",
     "unique_users=len(df.groupby('user_id'))\n",
     "print('The number of unique users in the dataset: ' + str(unique_users))"
    ]
@@ -189,7 +188,6 @@
    ],
    "source": [
     "# The proportion of users converted.\n",
-    "\n",
     "conv_user= df.converted.mean()\n",
     "print('The proportion of users converted: ' + str(conv_user))"
    ]
@@ -209,17 +207,9 @@
    ],
    "source": [
     "# The number of times the `new_page` and `treatment` don't line up.\n",
-    "\n",
     "query_mask = df.query(\"landing_page == 'new_page' and group != 'treatment'\").count()[0] + \\\n",
     "df.query(\"landing_page != 'new_page' and group == 'treatment'\").count()[0] \n",
     "print('The number of times the new page and treatment do not line up is: ' + str(query_mask) )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Do any of the rows have missing values?"
    ]
   },
   {
@@ -246,7 +236,6 @@
    ],
    "source": [
     "# Find out if any of the rows have missing values..\n",
-    "\n",
     "df.info()"
    ]
   },
@@ -269,11 +258,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
+    "# Drop the rows where treatment is not aligned with new_page or control is not aligned with old_page, \n",
+    "# because it is not clear if this row truly received the new or old page.\n",
     "df.drop(df.query(\"group == 'treatment' and landing_page != 'new_page'\").index, inplace = True)\n",
     "df.drop(df.query(\"group == 'control' and landing_page != 'old_page'\").index, inplace = True)\n",
     "df2 = df"
@@ -346,7 +337,6 @@
    ],
    "source": [
     "# Find out how many unique user_ids are in df2?\n",
-    "\n",
     "len(df2.groupby('user_id'))"
    ]
   },
@@ -438,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -447,19 +437,19 @@
        "(290585, 5)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "# Find out the number of rows in the new dataset\n",
     "df2.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -473,12 +463,13 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# # Find out the data type of the new dataset\n",
     "df2.dtypes"
    ]
   },
@@ -518,7 +509,7 @@
     }
    ],
    "source": [
-    "# to know how many users converted an how many not\n",
+    "# to know how many users converted and how many not\n",
     "df2.groupby('converted').size()"
    ]
   },
@@ -1063,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
