Continue working with Part I - Probability..

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -584,7 +584,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The probability converted in the control group\n"
+    "# The probability converted in the control group\n",
+    "\n",
+    "control = df2.query(\"group == 'control' and converted == 1\").count()[4] / df2[df2['group'] == 'control'].count()[4]\n",
+    "control"
    ]
   },
   {
