style and add Resources

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -8,18 +8,11 @@
     "\n",
     "\n",
     "## Table of Contents\n",
-    "- [Introduction](#intro)\n",
     "- [Part I - Probability](#probability)\n",
     "- [Part II - A/B Test](#ab_test)\n",
-    "- [Part III - Regression](#regression)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='intro'></a>\n",
-    "#### Introduction"
+    "- [Part III - Regression](#regression)\n",
+    "- [Part IV - Conclusions](#conclusion)\n",
+    "- [Part V - Resources](#resources)\n"
    ]
   },
   {
@@ -32,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +116,7 @@
        "4   864975  2017-01-21 01:52:26.210827    control     old_page          1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,13 +125,13 @@
     "# Load movies' data frame\n",
     "df =  pd.read_csv('ab_data.csv')\n",
     "\n",
-    "# Print out the first 5 lines to see how the dataset looks like\n",
+    "# Inspect dataset\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -189,13 +182,13 @@
    ],
    "source": [
     "# The proportion of users converted.\n",
-    "conv_user= df.converted.mean()\n",
+    "conv_user= df['converted'].mean()\n",
     "print('The proportion of users converted: ' + str(conv_user))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -274,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +276,7 @@
        "(290585, 5)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +296,7 @@
        "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +325,7 @@
        "290584"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +373,7 @@
        "2893   773192  2017-01-14 02:55:59.590927  treatment     new_page          0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +395,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +419,7 @@
        "(290585, 5)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +445,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +487,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +555,7 @@
        "0.11959667567149027"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,9 +573,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1203863045004612"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The probability converted in the control group\n",
     "\n",
@@ -600,9 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -1035,7 +1037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='conclusions'></a>\n",
+    "<a id='conclusion'></a>\n",
     "## Conclusions\n",
     "\n",
     "Congratulations on completing the project! \n",
@@ -1051,6 +1053,19 @@
     "When you're ready, click on the \"Submit Project\" button to go to the project submission page. You can submit your files as a .zip archive or you can link to a GitHub repository containing your project files. If you go with GitHub, note that your submission will be a snapshot of the linked repository at time of submission. It is recommended that you keep each project in a separate repository to avoid any potential confusion: if a reviewer gets multiple folders representing multiple projects, there might be confusion regarding what project is to be evaluated.\n",
     "\n",
     "It can take us up to a week to grade the project, but in most cases it is much faster. You will get an email once your submission has been reviewed. If you are having any problems submitting your project or wish to check on the status of your submission, please email us at dataanalyst-project@udacity.com. In the meantime, you should feel free to continue on with your learning journey by beginning the next module in the program."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "<a id='resources'></a>\n",
+    "### Resources\n",
+    "- Udacity Nanodegree Videos and Resources, including Links in this .ipynb\n",
+    "\n",
+    "- https://youtu.be/7FTp9JJ5DfE : Project Walkthrough Link on Slack's Project Thread"
    ]
   },
   {
