--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -25,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import all the necessary packages \n",
@@ -44,13 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -116,7 +127,7 @@
        "4   864975  2017-01-21 01:52:26.210827    control     old_page          1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -169,14 +180,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The proportion of users converted: 0.119659193556\n"
+      "The number of unique users in the dataset: 290584\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Another way to find out the number of unique users in the dataset.\n",
+    "unique_users= df.nunique()['user_id']\n",
+    "print('The number of unique users in the dataset: ' + str(unique_users))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The proportion of users converted: 0.11965919355605512\n"
      ]
     }
    ],
@@ -188,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -252,10 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Drop the rows where treatment is not aligned with new_page or control is not aligned with old_page, \n",
@@ -267,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +304,7 @@
        "(290585, 5)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +324,7 @@
        "0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +353,7 @@
        "290584"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,13 +365,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -373,7 +414,7 @@
        "2893   773192  2017-01-14 02:55:59.590927  treatment     new_page          0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +436,7 @@
        "0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +460,7 @@
        "(290585, 5)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +486,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +528,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +596,7 @@
        "0.11959667567149027"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -582,14 +623,13 @@
        "0.1203863045004612"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# The probability converted in the control group\n",
-    "\n",
     "control = df2.query(\"group == 'control' and converted == 1\").count()[4] / df2[df2['group'] == 'control'].count()[4]\n",
     "control"
    ]
@@ -603,10 +643,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5000636646764286"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.query(\"landing_page == 'new_page'\").count()[3] / df2['landing_page'].count()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1094,7 +1147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
