--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -680,7 +680,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Put your answer here.**"
+    "$$H_0: p_{new} - p_{old} <= 0$$\n",
+    "\n",
+    " $$H_1: p_{new} - p_{old} > 0$$"
    ]
   },
   {
