feat: Part II Q2 c-d solved

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -735,12 +735,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_𝑛𝑒𝑤 : 145311\n"
+     ]
+    }
+   ],
+   "source": [
+    "𝑛_𝑛𝑒𝑤 = df[df['group'] == 'treatment'].shape[0]\n",
+    "print('n_𝑛𝑒𝑤 : ' + str(n_𝑛𝑒𝑤))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -751,12 +760,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_𝑛𝑒𝑤 : 145274\n"
+     ]
+    }
+   ],
+   "source": [
+    "𝑛_old = df[df['group'] == 'control'].shape[0]\n",
+    "print('n_𝑛𝑒𝑤 : ' + str(n_old))"
+   ]
   },
   {
    "cell_type": "markdown",
