feat: Part II Q2 e-g solved

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -785,12 +785,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17212\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_page_converted = np.random.binomial( n_𝑛𝑒𝑤, p_new)\n",
+    "print(new_page_converted)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -801,12 +810,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17477\n"
+     ]
+    }
+   ],
+   "source": [
+    "old_page_converted = np.random.binomial( n_old, p_old)\n",
+    "print(old_page_converted)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -817,12 +835,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.0018543072236299613"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_page_converted/n_new - old_page_converted/n_old"
+   ]
   },
   {
    "cell_type": "markdown",
