feat: Part II Q2 i solved

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -835,22 +835,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.0018543072236299613"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.0018543072236299613\n"
+     ]
     }
    ],
    "source": [
-    "new_page_converted/n_new - old_page_converted/n_old"
+    "p_diff = (new_page_converted/n_new) - (old_page_converted/n_old)\n",
+    "print(p_diff)"
    ]
   },
   {
@@ -862,12 +860,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "p_diffs =[]\n",
+    "for value in range (10000):\n",
+    "    new_page_converted = np.random.binomial( n_𝑛𝑒𝑤, p_new)\n",
+    "    old_page_converted = np.random.binomial( n_old, p_old)\n",
+    "    p_diff = (new_page_converted/n_new) - (old_page_converted/n_old)\n",
+    "    p_diffs.append(p_diff)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -878,12 +883,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([   15.,    99.,   629.,  1793.,  3014.,  2744.,  1330.,   319.,\n",
+       "           51.,     6.]),\n",
+       " array([-0.00472452, -0.00374306, -0.00276161, -0.00178015, -0.00079869,\n",
+       "         0.00018277,  0.00116422,  0.00214568,  0.00312714,  0.0041086 ,\n",
+       "         0.00509005]),\n",
+       " <a list of 10 Patch objects>)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYEAAAD8CAYAAACRkhiPAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEWpJREFUeJzt3X+s3XV9x/HnS1DGpgQY16623Ypb90chEUdTSdwfTqZ0\nsqS4LaT8ISwzVAMzmmi2okvUP5qgTs3IhKVOQ0mcpJsSmgHboDExJgO8MLC2yqgCoXcFrpoFXTK2\n1vf+uB/m4XLbe+6Pc0/r5/lIvjmf8/l+Pt/v53Nu09f5/jjnpKqQJPXpFeMegCRpfAwBSeqYISBJ\nHTMEJKljhoAkdcwQkKSOGQKS1DFDQJI6ZghIUsdOH/cA5nPeeefV+vXrxz0MSTqlPPTQQz+oqon5\n2p30IbB+/XomJyfHPQxJOqUkeWqYdp4OkqSOGQKS1DFDQJI6ZghIUscMAUnqmCEgSR2bNwSS/EKS\nB5M8muRAko+3+nOT3Jvk8fZ4zkCfG5IcSvJYkssG6i9Osr+tuylJRjMtSdIwhjkSeAF4a1W9AbgI\n2JLkEmAHsK+qNgD72nOSbAS2ARcAW4Cbk5zWtnULcC2woS1blnEukqQFmjcEasZP2tNXtqWArcDu\nVr8buKKVtwK3V9ULVfUEcAjYnGQ1cFZV3V8zP2x820AfSdIYDPWJ4fZO/iHgN4DPVdUDSVZV1ZHW\n5BlgVSuvAe4f6H641f1vK8+ul5Zk/Y67xrLfJ2+8fCz7lZbTUBeGq+pYVV0ErGXmXf2Fs9YXM0cH\nyyLJ9iSTSSanp6eXa7OSpFkWdHdQVf0n8DVmzuU/207x0B6fa82mgHUD3da2uqlWnl0/1352VdWm\nqto0MTHv9x9JkhZpmLuDJpKc3cpnAm8DvgvsBa5pza4B7mzlvcC2JGckOZ+ZC8APtlNHzye5pN0V\ndPVAH0nSGAxzTWA1sLtdF3gFsKeq/jHJvwJ7krwbeAq4EqCqDiTZAxwEjgLXV9Wxtq3rgFuBM4F7\n2iJJGpN5Q6CqvgW8cY76HwKXHqfPTmDnHPWTwIUv7yFJGgc/MSxJHTMEJKljhoAkdcwQkKSOGQKS\n1DFDQJI6ZghIUscMAUnqmCEgSR0zBCSpY4aAJHXMEJCkjg31y2KSXm5cv2gG/qqZlo9HApLUMUNA\nkjpmCEhSxwwBSeqYISBJHTMEJKljhoAkdcwQkKSOGQKS1DFDQJI6ZghIUscMAUnq2LwhkGRdkq8l\nOZjkQJL3t/qPJZlK8khb3jHQ54Ykh5I8luSygfqLk+xv625KktFMS5I0jGG+RfQo8MGqejjJa4CH\nktzb1n22qv5ysHGSjcA24ALgdcB9SX6zqo4BtwDXAg8AdwNbgHuWZyqSpIWa90igqo5U1cOt/GPg\nO8CaE3TZCtxeVS9U1RPAIWBzktXAWVV1f1UVcBtwxZJnIElatAVdE0iyHngjM+/kAd6X5FtJvpjk\nnFa3Bnh6oNvhVremlWfXS5LGZOgQSPJq4CvAB6rqeWZO7bweuAg4Anx6uQaVZHuSySST09PTy7VZ\nSdIsQ4VAklcyEwBfqqqvAlTVs1V1rKp+Cnwe2NyaTwHrBrqvbXVTrTy7/mWqaldVbaqqTRMTEwuZ\njyRpAYa5OyjAF4DvVNVnBupXDzR7J/DtVt4LbEtyRpLzgQ3Ag1V1BHg+ySVtm1cDdy7TPCRJizDM\n3UFvBt4F7E/ySKv7MHBVkouAAp4E3gNQVQeS7AEOMnNn0fXtziCA64BbgTOZuSvIO4MkaYzmDYGq\n+gYw1/38d5+gz05g5xz1k8CFCxmgJGl0/MSwJHXMEJCkjhkCktQxQ0CSOmYISFLHDAFJ6pghIEkd\nMwQkqWOGgCR1zBCQpI4ZApLUMUNAkjpmCEhSxwwBSeqYISBJHTMEJKljhoAkdcwQkKSOGQKS1DFD\nQJI6ZghIUscMAUnqmCEgSR0zBCSpY4aAJHXMEJCkjs0bAknWJflakoNJDiR5f6s/N8m9SR5vj+cM\n9LkhyaEkjyW5bKD+4iT727qbkmQ005IkDWOYI4GjwAeraiNwCXB9ko3ADmBfVW0A9rXntHXbgAuA\nLcDNSU5r27oFuBbY0JYtyzgXSdICzRsCVXWkqh5u5R8D3wHWAFuB3a3ZbuCKVt4K3F5VL1TVE8Ah\nYHOS1cBZVXV/VRVw20AfSdIYLOiaQJL1wBuBB4BVVXWkrXoGWNXKa4CnB7odbnVrWnl2/Vz72Z5k\nMsnk9PT0QoYoSVqAoUMgyauBrwAfqKrnB9e1d/a1XIOqql1VtamqNk1MTCzXZiVJswwVAkleyUwA\nfKmqvtqqn22neGiPz7X6KWDdQPe1rW6qlWfXS5LGZJi7gwJ8AfhOVX1mYNVe4JpWvga4c6B+W5Iz\nkpzPzAXgB9upo+eTXNK2efVAH0nSGJw+RJs3A+8C9id5pNV9GLgR2JPk3cBTwJUAVXUgyR7gIDN3\nFl1fVcdav+uAW4EzgXvaIkkak3lDoKq+ARzvfv5Lj9NnJ7BzjvpJ4MKFDFCSNDp+YliSOmYISFLH\nDAFJ6pghIEkdMwQkqWOGgCR1zBCQpI4ZApLUMUNAkjo2zNdGSPNav+OucQ9B0iJ4JCBJHTMEJKlj\nhoAkdcwQkKSOGQKS1DFDQJI6ZghIUscMAUnqmCEgSR0zBCSpY4aAJHXMEJCkjhkCktQxQ0CSOmYI\nSFLH5g2BJF9M8lySbw/UfSzJVJJH2vKOgXU3JDmU5LEklw3UX5xkf1t3U5Is/3QkSQsxzJHArcCW\nOeo/W1UXteVugCQbgW3ABa3PzUlOa+1vAa4FNrRlrm1KklbQvCFQVV8HfjTk9rYCt1fVC1X1BHAI\n2JxkNXBWVd1fVQXcBlyx2EFLkpbHUq4JvC/Jt9rponNa3Rrg6YE2h1vdmlaeXS9JGqPFhsAtwOuB\ni4AjwKeXbURAku1JJpNMTk9PL+emJUkDFhUCVfVsVR2rqp8Cnwc2t1VTwLqBpmtb3VQrz64/3vZ3\nVdWmqto0MTGxmCFKkoawqBBo5/hf9E7gxTuH9gLbkpyR5HxmLgA/WFVHgOeTXNLuCroauHMJ45Yk\nLYPT52uQ5MvAW4DzkhwGPgq8JclFQAFPAu8BqKoDSfYAB4GjwPVVdaxt6jpm7jQ6E7inLZKkMZo3\nBKrqqjmqv3CC9juBnXPUTwIXLmh0kqSR8hPDktQxQ0CSOmYISFLHDAFJ6pghIEkdMwQkqWPz3iIq\n6eSzfsddY9nvkzdePpb9anQ8EpCkjhkCktQxQ0CSOmYISFLHDAFJ6pghIEkdMwQkqWOGgCR1zBCQ\npI4ZApLUMUNAkjpmCEhSxwwBSeqYISBJHTMEJKljhoAkdcwQkKSOGQKS1LF5QyDJF5M8l+TbA3Xn\nJrk3yePt8ZyBdTckOZTksSSXDdRfnGR/W3dTkiz/dCRJCzHMkcCtwJZZdTuAfVW1AdjXnpNkI7AN\nuKD1uTnJaa3PLcC1wIa2zN6mJGmFzRsCVfV14EezqrcCu1t5N3DFQP3tVfVCVT0BHAI2J1kNnFVV\n91dVAbcN9JEkjclirwmsqqojrfwMsKqV1wBPD7Q73OrWtPLseknSGC35wnB7Z1/LMJb/l2R7kskk\nk9PT08u5aUnSgMWGwLPtFA/t8blWPwWsG2i3ttVNtfLs+jlV1a6q2lRVmyYmJhY5REnSfBYbAnuB\na1r5GuDOgfptSc5Icj4zF4AfbKeOnk9ySbsr6OqBPpKkMTl9vgZJvgy8BTgvyWHgo8CNwJ4k7wae\nAq4EqKoDSfYAB4GjwPVVdaxt6jpm7jQ6E7inLZKkMZo3BKrqquOsuvQ47XcCO+eonwQuXNDoJEkj\n5SeGJaljhoAkdcwQkKSOGQKS1DFDQJI6ZghIUscMAUnqmCEgSR0zBCSpY4aAJHXMEJCkjhkCktQx\nQ0CSOmYISFLHDAFJ6pghIEkdMwQkqWOGgCR1zBCQpI4ZApLUMUNAkjp2+rgHoOW1fsdd4x6CpFOI\nRwKS1DFDQJI6ZghIUscMAUnq2JJCIMmTSfYneSTJZKs7N8m9SR5vj+cMtL8hyaEkjyW5bKmDlyQt\nzXIcCfxOVV1UVZva8x3AvqraAOxrz0myEdgGXABsAW5Octoy7F+StEijOB20FdjdyruBKwbqb6+q\nF6rqCeAQsHkE+5ckDWmpIVDAfUkeSrK91a2qqiOt/AywqpXXAE8P9D3c6l4myfYkk0kmp6enlzhE\nSdLxLPXDYr9dVVNJXgvcm+S7gyurqpLUQjdaVbuAXQCbNm1acH9J0nCWdCRQVVPt8TngDmZO7zyb\nZDVAe3yuNZ8C1g10X9vqJEljsugQSPJLSV7zYhl4O/BtYC9wTWt2DXBnK+8FtiU5I8n5wAbgwcXu\nX5K0dEs5HbQKuCPJi9v5u6r6pyTfBPYkeTfwFHAlQFUdSLIHOAgcBa6vqmNLGr0kaUkWHQJV9X3g\nDXPU/xC49Dh9dgI7F7tPSdLy8hPDktQxQ0CSOmYISFLHDAFJ6pghIEkdMwQkqWOGgCR1zB+alzS0\n9TvuGst+n7zx8rHstwceCUhSxwwBSeqYISBJHTMEJKljhoAkdcwQkKSOGQKS1DFDQJI6ZghIUscM\nAUnqmCEgSR0zBCSpY4aAJHXMEJCkjvlV0iMwrq/blaSF8khAkjpmCEhSx1b8dFCSLcBfAacBf1tV\nN670GCSdWsZ5ivXn/VfNVvRIIMlpwOeA3wM2Alcl2biSY5Ak/cxKnw7aDByqqu9X1f8AtwNbV3gM\nkqRmpU8HrQGeHnh+GHjTqHbmXTqSlmpc/4+s1Gmok/IW0STbge3t6U+SPDbO8czhPOAH4x7EGDjv\nvjjvMconlryJXxum0UqHwBSwbuD52lb3ElW1C9i1UoNaqCSTVbVp3ONYac67L867Dyt9TeCbwIYk\n5yd5FbAN2LvCY5AkNSt6JFBVR5P8KfDPzNwi+sWqOrCSY5Ak/cyKXxOoqruBu1d6v8vspD1VNWLO\nuy/OuwOpqnGPQZI0Jn5thCR1zBAYkOTcJPcmebw9nnOcdluSPJbkUJIdw/ZP8qtJfpLkQ6Oey0KM\nat5J3pbkoST72+NbV2pOJ3K8eQysT5Kb2vpvJfmt+foO+xqO04jm/akk323t70hy9krNZ1ijmPfA\n+g8mqSTnjXoeI1NVLm0BPgnsaOUdwCfmaHMa8D3g9cCrgEeBjcP0B/4B+HvgQ+Oe60rMG3gj8LpW\nvhCYOgnmetx5DLR5B3APEOAS4IGl/u3HvYxw3m8HTm/lT/Qy77Z+HTM3uTwFnDfuuS528UjgpbYC\nu1t5N3DFHG1O9NUXx+2f5ArgCeBkvBtqJPOuqn+rqv9o9QeAM5OcMYLxL8QwX12yFbitZtwPnJ1k\n9Tx9h3kNx2kk866qf6mqo63//cx89udkMqq/N8BngT8DTukLq4bAS62qqiOt/Aywao42c331xZoT\n9U/yauDPgY8v+4iXx0jmPcsfAg9X1QvLMN6lONE85muz1NdgnEY170F/wsw76pPJSOadZCszR7aP\nLveAV9pJ+bURo5TkPuBX5lj1kcEnVVVJFp3ws/p/DPhsVf0kyWI3uSRjmveL+76AmVMFb1/sdk8l\nS30NT0VJPgIcBb407rGMWpJfBD7Mz8m/5+5CoKp+93jrkjybZHVVHWmHg8/N0exEX31xvP5vAv4o\nySeBs4GfJvnvqvrrJU9oSGOaN0nWAncAV1fV95Y8kaUb5qtLjtfmlSfoO8xrOE6jmjdJ/hj4feDS\naifLTyKjmPevA+cDj7Y3dWuBh5NsrqpnlnX0K2HcFyVOpgX4FC+9uPfJOdqcDnyfmX8EL14sumAB\n/T/GyXdheCTzZibwHgX+YNxzHGYeA20u56UXCh9cjr/9z+m8twAHgYlxz3El5z2r/5OcwheGxz6A\nk2kBfhnYBzwO3Aec2+pfB9w90O4dwL8zc+fAR+brP2sfJ2MIjGTewF8A/wU8MrC89iSY78vmAbwX\neG8rh5kfP/oesB/YtBx/+3EvI5r3IWbOm7/49/2bcc9zJeY9a/undAj4iWFJ6ph3B0lSxwwBSeqY\nISBJHTMEJKljhoAkdcwQkKSOGQKS1DFDQJI69n+Rd7wz6NqlNgAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x173925c0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.hist(p_diffs)"
+   ]
   },
   {
    "cell_type": "markdown",
